native/wdsp/wdsp.h

// from rxa.h
enum rxaMeterType {
  RXA_S_PK,
  RXA_S_AV,
  RXA_ADC_PK,
  RXA_ADC_AV,
  RXA_AGC_GAIN,
  RXA_AGC_PK,
  RXA_AGC_AV,
  RXA_METERTYPE_LAST
};
extern void SetTXAAMSQRun (int channel, int run);
//
// Interfaces from analyzer.c
//

extern void SetupDetectMaxBin(int run, int disp, int ss, int LO, double rate,
                              double fLow, double fHigh, double tau, int frame_rate);
extern void SetCalibration (  int disp,
                              int set_num,
                              int n_points,
                              double (*cal)[dMAX_M + 1]
                           );
//
// Interfaces from cfcomp.c
//

extern void SetTXACFCOMPRun (int channel, int run);
extern void SetTXACFCOMPprofile (int channel, int nfreqs, double* F, double* G, double *E);
extern void SetTXACFCOMPPrecomp (int channel, double precomp);
extern void SetTXACFCOMPPeqRun (int channel, int run);
extern void SetTXACFCOMPPrePeq (int channel, double prepeq);
extern void GetTXACFCOMPDisplayCompression (int channel, double* comp_values, int* ready);
//
// Interfaces from cfir.c
//

extern void SetTXACFIRRun (int channel, int run);
//
// Interfaces from compress.c
//

extern void SetTXACompressorRun (int channel, int run);
extern void SetTXACompressorGain (int channel, double gain);
//
// Interfaces from dexp.c
//

extern void create_dexp (int id, int run_dexp, int size, double* in, double* out, int rate, double dettau,
                         double tattack, double tdecay,
                         double thold, double exp_ratio, double hyst_ratio, double attack_thresh, int nc, int wtype, double lowcut,
                         double highcut,
                         int run_filt, int run_vox, int run_audelay, double audelay, void (__stdcall *pushvox)(int id, int active),
                         int antivox_run, int antivox_size, int antivox_rate, double antivox_gain, double antivox_tau);
extern void SendCBPushDexpVox (int id, void (__stdcall *pushvox)(int id, int active));
extern void SetTXAEQRun (int channel, int run);
extern void SetTXAEQRun (int channel, int run);
extern void SetTXAPreGenRun (int channel, int run);
extern void SetTXAPreGenMode (int channel, int mode);
extern void SetTXAPreGenToneMag (int channel, double mag);
extern void SetTXAPreGenToneFreq (int channel, double freq);
extern void SetTXAPostGenRun (int channel, int run);
extern void SetTXAPostGenMode (int channel, int mode);
extern void SetTXAPostGenToneMag (int channel, double mag);
extern void SetTXAPostGenToneFreq (int channel, double freq);
extern void SetTXAPostGenTTMag (int channel, double mag1, double mag2);
extern void SetTXAPostGenTTFreq (int channel, double freq1, double freq2);
extern void SetTXAPHROTRun (int channel, int run);
extern void SetTXAPHROTCorner (int channel, double frequency);
extern void SetTXAPHROTNstages (int channel, int nstages);
extern void SetTXAPHROTReverse (int channel, int reverse);
extern void SetTXAPHROTAutoMode(int channel, int autoMode);
extern void SetTXAPHROTAutoReset(int channel);
extern void GetTXAPHROTAsymmetry(int channel,
                                 double* in_pos,
                                 double* in_neg,
                                 double* in_ratio,
                                 double* out_pos,
                                 double* out_neg,
                                 double* out_ratio,
                                 double* current_fc,
                                 double* auto_step);
//
// Interfaces from meter.c
//

extern double GetRXAMeter (int channel, int mt);
//
// Interfaces from osctrl.c
//

extern void SetTXAosctrlRun (int channel, int run);
extern void SetTXAosctrlBandwidth (int channel, double bandwidth);
extern void SetTXAPanelRun (int channel, int run);
extern void SetTXAPanelGain1 (int channel, double gain);
extern void SetTXAPanelSelect (int channel, int select);
extern void SetTXAALCSt (int channel, int state);
extern void SetTXAALCAttack (int channel, int attack);
extern void SetTXAALCDecay (int channel, int decay);
extern void SetTXAALCMaxGain (int channel, double maxgain);
extern void SetTXALevelerSt (int channel, int state);
extern void SetTXALevelerDecay (int channel, int decay);
extern void SetTXALevelerTop (int channel, double maxgain);