Zeus.Dsp/Wdsp/NativeMethods.cs


    // Correcting FIR — compensates the sinc droop introduced by TXA's
    // 48k → 192k upsample on P2. P2 firmware requires this on; P1 leaves it
    // off. Thetis audio.cs:1803-1808, pihpsdr transmitter.c:1288.
    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetTXACFIRRun(int channel, int run);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetTXAPanelRun(int channel, int run);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetTXAPanelGain1(int channel, double gain);

    // ALC (Automatic Level Control) must be on for the SSB modulator to emit
    // non-zero IQ. Upstream TX code carries a "TX ALC on (never switch it
    // off!)" warning. When the ALC is disabled the mic reaches TXA but the
    // modulator outputs 0.0 — confirmed on an HL2 live rig 2026-04-18.
    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetTXAALCSt(int channel, int state);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetTXAALCAttack(int channel, int attackMs);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetTXAALCDecay(int channel, int decayMs);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetTXAALCMaxGain(int channel, double maxGainDb);

    // Microphone noise gate — we don't want it shaping SSB audio.
    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetTXAAMSQRun(int channel, int run);

    // TX chain stage enables. WDSP ships these "off" at channel-create time
    // (see native/wdsp/TXA.c) but we assert them explicitly in OpenTxChannel
    // so our TX baseline is deterministic, not a byproduct of library
    // defaults. Enabling/tuning Leveler/Compressor is operator-controlled
    // follow-up work; this worktree only locks in the clean-slate state.
    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetTXALevelerSt(int channel, int state);

    // Leveler maximum-gain ceiling. WDSP's SetTXALevelerTop takes the value
    // in dB (wcpAGC.c:648 — converts internally via pow(10, maxgain/20)
    // to the linear `max_gain` field on the wcpagc struct). create_wcpagc
    // (TXA.c:169) ships with max_gain = 1.778 linear ≈ +5 dB; this setter
    // lets the operator widen/narrow the peak-leveling headroom at runtime.
    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetTXALevelerTop(int channel, double maxgain);

    // Leveler decay (release) time in ms. WDSP's SetTXALevelerDecay (wcpAGC.c)
    // sets the leveling release tau; operator range 1..5000 ms, Thetis default
    // 100 (radio.cs). Bound here for the Phase-3 TX-leveling control surface.
    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetTXALevelerDecay(int channel, int decay);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetTXACompressorRun(int channel, int run);

    // Compressor (CPDR) make-up gain in dB. WDSP's SetTXACompressorGain
    // (compress.c) sets the CPDR drive; operator range 0..20 dB, default 0.
    // Bound here for the Phase-3 TX-leveling control surface.
    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetTXACompressorGain(int channel, double gain);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetTXACFCOMPRun(int channel, int run);

    // CFC (Continuous Frequency Compressor — multi-band frequency-domain
    // compressor sitting in xtxa between xeqp and xbandpass). Issue #123.
    // SetTXACFCOMPprofile takes parallel arrays F[], G[], E[] (frequency Hz,
    // compression dB, post-EQ gain dB). The caller pins F/G/E with `fixed`
    // blocks and passes them via `ref *pF`.
    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetTXACFCOMPprofile(
        int channel,
        int nfreqs,
        ref double F,
        ref double G,
        ref double E);

    // Frequency-independent pre-compressor gain (dB).
    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetTXACFCOMPPrecomp(int channel, double precomp);

    // Frequency-independent pre-EQ gain (dB).
    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetTXACFCOMPPrePeq(int channel, double prepeq);

    // Post-comp EQ branch enable (separate toggle from the master CFCOMPRun).
    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetTXACFCOMPPeqRun(int channel, int run);

    // Per-bin compression-meter readback. `comp_values` must be a pinned
    // double[] sized to the FFT bins; `ready` is set to 1 when a fresh frame
    // is available. Read-only diagnostic — not on the hot path.
    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void GetTXACFCOMPDisplayCompression(
        int channel,
        ref double comp_values,
        out int ready);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetTXAPHROTRun(int channel, int run);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetTXAPHROTCorner(int channel, double frequency);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetTXAPHROTNstages(int channel, int nstages);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetTXAPHROTReverse(int channel, int reverse);

    // WDSP SetTXAPHROTAutoMode: 1 enables the live PHROT corner optimizer.
    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetTXAPHROTAutoMode(int channel, int autoMode);

    // WDSP SetTXAPHROTAutoReset: restart optimizer from the WDSP default corner.
    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetTXAPHROTAutoReset(int channel);

    // WDSP GetTXAPHROTAsymmetry: linear envelope peaks, ratios, current fc, step.
    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void GetTXAPHROTAsymmetry(
        int channel,
        out double in_pos,
        out double in_neg,
        out double in_ratio,
        out double out_pos,
        out double out_neg,
        out double out_ratio,
        out double current_fc,
        out double auto_step);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetTXAosctrlRun(int channel, int run);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetTXAosctrlBandwidth(int channel, double bandwidth);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetTXAEQRun(int channel, int run);

    // TUN carrier generator (wdsp.h:586-589) injected post-DSP. Zeus uses
    // mode 0 with a zero-Hz tone outside CW and a sideband-signed CW pitch
    // that cancels the CW transmit NCO offset.
    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetTXAPostGenRun(int channel, int run);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetTXAPostGenMode(int channel, int mode);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetTXAPostGenToneMag(int channel, double mag);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetTXAPostGenToneFreq(int channel, double freq);

    // Two-tone test generator (wdsp.h:590-591). PostGen mode=1 sums two
    // tones at the modulator input. Standard PS calibration excitation —
    // see Thetis PSForm.cs:935-940. Independent of TUN (mode=0).
    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetTXAPostGenTTMag(int channel, double mag1, double mag2);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetTXAPostGenTTFreq(int channel, double freq1, double freq2);

    // Pre-DSP generator (injected before the TX chain). pihpsdr transmitter.c
    // :1293-1296 explicitly disables PreGen on TXA open — WDSP's create_channel
    // doesn't guarantee mag=0/run=0, and a residual PreGen tone would appear
    // alongside the PostGen tune tone as a second carrier.
    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetTXAPreGenRun(int channel, int run);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetTXAPreGenMode(int channel, int mode);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetTXAPreGenToneMag(int channel, double mag);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetTXAPreGenToneFreq(int channel, double freq);

    // TXA Panel input-select. pihpsdr sets this to 2 = "Mic I sample" on open
    // (transmitter.c:1298). Default varies by WDSP build — being explicit.
    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetTXAPanelSelect(int channel, int select);

    // meter.h:67 — returns a dBm value from RXA's internal meter ring. `mt` is
    // the rxaMeterType ordinal: 0 = RXA_S_PK, 1 = RXA_S_AV (what the S-meter
    // uses), 2 = RXA_ADC_PK, … See Thetis console/dsp.cs:876-884 for the full
    // enum. Thread-safe — WDSP holds a per-meter CRITICAL_SECTION internally.
    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial double GetRXAMeter(int channel, int mt);

    // Analyzer max-bin detector used by the S-meter reading selector. WDSP
    // evaluates only the requested passband and applies a decaying peak with
    // the supplied time constant; the display slot is the RX channel id.
    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetupDetectMaxBin(
        int run,
        int disp,
        int ss,
        int lo,
        double rate,
        double fLow,
        double fHigh,
        double tau,
        int frameRate);
